--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<title>ISHII 2bit unofficial. (NOT Kindness for your eyes...) / 非公式石井通人 (目に優しくない)</title>
 	<meta name="keywords" content="glitch,program,ios,2bit,ishii,omohide breaker">
 	<meta name="description" content="kindness">
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script type="text/javascript" src="./js/glitch-canvas.min.js"></script>
 	<script src="./index.js"></script>
 	<script type="text/javascript">
